test/e2e/fixtures/mapping-simple/queries.json
[
  {
    "url": "/mapping-simple/",
    "method": "GET"
  },
  {
    "url": "/need-normalization/../mapping-simple/",
    "method": "GET"
  }
]
